# ShaderBuilder

./: .gitignore  CMakeLists.txt  CompileToSPV.cpp  Config.cpp  LoadMat.cpp  LoadShader.cpp  README.md  ShaderBuilder.cpp
BinaryMaterial/: CompileToSPV.cpp  MakeBinaryMaterial.cpp  StatMaterialResource.cpp  StatMaterialResource.h
Documents/: Shader Generator Deferred.md  Shader Generator.md  Shader Section.md
GLSLCompiler/: GLSLCompiler.cpp  GLSLCompiler.h  VKShaderParse.h  glsl2spv.cpp
GLSLParse/: GLSLToken.h  GLSLTokenizer.cpp  GLSLTokenizer.h
MatData/: Varying.h
MatParse/: MSP_Code.cpp  MSP_PMC.cpp  MatSection.cpp  MatSection.h  MatSectionParse.cpp  MatSectionParse.h
ShaderData/: MaterialDataInfo.h  MaterialDataManager.cpp  MaterialDataManager.h  MaterialDescriptorManager.cpp  MaterialDescriptorManager.h  ResortShader.cpp  ResortShaderDescriptor.cpp  ShaderDataInfo.cpp  ShaderDataInfo.h  ShaderDataManager.cpp  ShaderDataManager.h  ShaderDescriptorManager.cpp  ShaderDescriptorManager.h  Varying.h  pmc.h
ShaderGen/: LoadMat.cpp  LoadShader.cpp  ShaderGen.cpp  ShaderGen.h  ShaderGenFragment.cpp  ShaderGenManager.cpp  ShaderGenManager.h  ShaderGenVertex.cpp
ShaderParse/: SSP_Code.cpp  SSP_Const.cpp  SSP_Data.cpp  SSP_Varying.cpp  ShaderSection.cpp  ShaderSection.h  ShaderSectionParse.cpp  ShaderSectionParse.h
TestShader/2D/: PureColor.frag  PureColor.mat  PureColor.vert  VertexColor.frag  VertexColor.mat  VertexColor.vert  VertexColor2D.mat  VertexColor2D.vert  VertexColor2DNDC.mat  VertexColor2DNDC.vert
TestShader/BlinnPhong/: BlinnPhong.gb  BlinnPhong.mat  BlinnPhong.us
TestShader/PMC/: Color3.pmc  Color4.pmc  ColorNormal.pmc
TestShader/UBO/ColorMaterial/: PureColorMaterial.ubo
vulkan/: VKShaderCommon.cpp  VKShaderCommon.h
